--- a/README
+++ b/README
@@ -8,7 +8,8 @@ dwm is an extremely fast, small, and dynamic window manager for X.
 This is in the order that I patched everything:
 
 - [fullgaps](https://dwm.suckless.org/patches/fullgaps/)
-- [fullgaps](https://dwm.suckless.org/patches/systray/)
+- [systray](https://dwm.suckless.org/patches/systray/)
+- [rotatestack](https://dwm.suckless.org/patches/rotatestack/)
 
 
 Requirements
