--- a/README
+++ b/README
@@ -9,7 +9,7 @@ This is in the order that I patched everything:
 
 - [fullgaps](https://dwm.suckless.org/patches/fullgaps/) (slightly modified)
 - [systray](https://dwm.suckless.org/patches/systray/)
-- [rotatestack](https://dwm.suckless.org/patches/rotatestack/)
+- [movestack](https://dwm.suckless.org/patches/movestack/)
 - [cyclelayouts](https://dwm.suckless.org/patches/cyclelayouts/)
 - [alwayscenter](https://dwm.suckless.org/patches/alwayscenter/)
 - [attachabove](https://dwm.suckless.org/patches/attachabove/)
